# global_mock

./: CMakeLists.txt
1/: mockrenderer.h  renderer.h  test_printer.cpp
1/cmake/: add_dl_project.cmake
2/: CMakeLists.txt  test_printer.cpp
3/: main.cpp  printer.h  test_printer.cpp
3/cmake/: add_dl_project.CMakeLists.cmake.in
4/: CMakeLists.txt  test_static.cpp
cmake/: add_dl_project.cmake~
